.provarCaches/00D410000011HE0EAM/objects/rstkf__arcntl__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_arcntl</customHelpPage>
    <description>arcntl__c</description>
    <fields>
        <fullName>rstkf__arcntl_allowpaymenttosisterco__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sister Companies Can Receive Our Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_allowsistercotousecrmemo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sister Companies Can Apply Our CR Memos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_allowxtradisc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>arcntl_allowxtradisc__c</description>
        <inlineHelpText>Enabling this field allows users to specify a Discount Amount in the Cash Receipts page in excess of the amount allowed. It does not apply where no discount is allowed. Entry of a higher amount drives an increase to the AR Txn discount percentage.</inlineHelpText>
        <label>Allow More Discount Than Available in CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_applysistercocrmemo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>We Can Apply Sister Company&apos;s CR Memos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_arbatchopt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Transactions per Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_bankacctpolicy__c</fullName>
        <label>Default Bank Account Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Constant</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>No default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_bankdefltcrcarddepoffset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cash Receipts CC Pay Offset to AR Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipts CC Pay Offset to A/R Acct)</relationshipLabel>
        <relationshipName>arcntls8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_bankdepvarmulticurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Multi-Currency Payment Variance Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Currency Rounding Variance Account - MC)</relationshipLabel>
        <relationshipName>arcntls10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_bankdepvarsinglecurr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Single-Currency Payment Variance Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Currency Rounding Variance Account - SC)</relationshipLabel>
        <relationshipName>arcntls9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_cashtoglpolicy__c</fullName>
        <label>Cash Receipts Cash to GL Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Allow Override</fullName>
                </value>
                <value>
                    <fullName>Never Default</fullName>
                </value>
                <value>
                    <fullName>Constant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_compoundfinancecharges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Charge on Principal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_crcardprocfeeacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Reconcile - CC Processing Fee Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Bank reconciliation - CC proc fee acc)</relationshipLabel>
        <relationshipName>arcntls12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_createzerobalstmts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Zero-Balance Statements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_currentbalmessage__c</fullName>
        <label>Current-Balance Statement Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltaracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Accounts Receivable Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (GL Account)</relationshipLabel>
        <relationshipName>arcntls11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltbankacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls</relationshipLabel>
        <relationshipName>arcntls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_discnt__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cash Receipt Discounts Allowed Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipt Discounts Allowed Account)</relationshipLabel>
        <relationshipName>arcntls6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_gain__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AR Foreign Exchange Gain Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipt  Currency Gain Account)</relationshipLabel>
        <relationshipName>arcntls3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_glcash__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cash to GL Offset Acct Default</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipts Def Cash to GL Offset Acct)</relationshipLabel>
        <relationshipName>arcntls7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_loss__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AR Foreign Exchange Loss Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipt  Currency Loss Account)</relationshipLabel>
        <relationshipName>arcntls4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_rounding__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cash Receipt Curr Round Cash Offset Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipt Curr Round Cash Offset Acct)</relationshipLabel>
        <relationshipName>arcntls5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_dfltcashrcpts_writeoff__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cash Receipt Write-Off / Up Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Cash Receipt  Write-Off Debit Account)</relationshipLabel>
        <relationshipName>arcntls2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_emailtadhocsstmt__c</fullName>
        <description>arcntl_emailtadhocsstmt__c</description>
        <label>Default Ad Hoc Cust Statement Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_emailtmemo__c</fullName>
        <description>Form Template for AR Memo Print</description>
        <inlineHelpText>Email Template for AR Memo Print</inlineHelpText>
        <label>Form Template for AR Memo Print</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_emailtstatements__c</fullName>
        <description>arcntl_emailtstatements__c</description>
        <label>Default Customer Statement Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchargedays__c</fullName>
        <label>Finance Charge on Balances This Late</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchargedrmemos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Charge on Debit Memos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchargepct__c</fullName>
        <label>Finance Charge Monthly Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgdrmemotext__c</fullName>
        <label>Finance Charge Debit Memo Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchginterestaccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Finance Charges Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Finance Charges Earned Interest Account)</relationshipLabel>
        <relationshipName>arcntls07</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchglatepaytrigger__c</fullName>
        <label>Finance Charge Late Payment Trigger</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Must Be Past Due At Month Start</fullName>
                </value>
                <value>
                    <fullName>Falls Due During The Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgmemotext__c</fullName>
        <label>ZZ-Obsolete Finance Charge Memo Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgminimum__c</fullName>
        <label>Finance Charge Minimum</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgpartialpaypolicy__c</fullName>
        <label>Partial Payment During Month Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Forgive Partially Paid Invoices</fullName>
                </value>
                <value>
                    <fullName>Charge Whole Month as Month End Balance</fullName>
                </value>
                <value>
                    <fullName>Charge Day by Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgproratemethod__c</fullName>
        <label>Due in Month Proration Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>30-Day Method</fullName>
                </value>
                <value>
                    <fullName>Actual Days Method</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgshowdetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Finance Charge in Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgstmttext__c</fullName>
        <label>Finance Charge Statement Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_finchgthreshhold__c</fullName>
        <label>Finance Charge Threshold</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls</relationshipLabel>
        <relationshipName>arcntls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_interestexpacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to book any Interest Expense when doing Bank Reconciliation.  AR Account Type must be &apos;Interest Expense&apos;.</inlineHelpText>
        <label>Bank Reconcile - Interest Expense Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Bank Reconcile - Interest Expense Acct)</relationshipLabel>
        <relationshipName>arcntls14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_interestincomeacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Used to book any Interest Income when doing Bank Reconciliation.  AR Account Type must be &apos;Interest Income&apos;.</inlineHelpText>
        <label>Bank Reconcile - Interest Income Acct</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Accounts Receivable Controls (Bank Reconcile - Interest Income Acct)</relationshipLabel>
        <relationshipName>arcntls13</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_large_balance_w_o_limit__c</fullName>
        <label>Maximum Write Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_large_balance_w_u_limit__c</fullName>
        <label>Maximum Write Up Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_lastagedate__c</fullName>
        <label>Date of Last Aging Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_latebalnofinchgmessage__c</fullName>
        <label>Late-Balance, No Finance Charge Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_minfinchgtextline__c</fullName>
        <label>Minimum Finance Charge Statement Text</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_nonminfinchgtextline__c</fullName>
        <label>Non-Min Finance Charge Statement Text</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_notxndelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>arcntl_notxndelete__c</description>
        <label>Prevent Delete of Receivable Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_receiveintercocash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>We Can Receive Sister Companies&apos; Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_showapplied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>arcntl_showapplied__c</description>
        <inlineHelpText>This indicator is used to default the Customer Company field where it causes transactions that are applied during the Statement Period to be shown on the Customer Statement.</inlineHelpText>
        <label>Show Applied Transactions in Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_small_balance_w_o_limit__c</fullName>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_small_balance_w_u_limit__c</fullName>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_statementpdend__c</fullName>
        <description>arcntl_statementpdend__c</description>
        <inlineHelpText>This field allows for the definition of the AR Statement Period which by default is a calendar month. (Example: entering 25 here would be Jan 26 – Feb 25,  Feb26 - Mar25, etc.)</inlineHelpText>
        <label>AR Statement Period End Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End of Month</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_statementpolicy__c</fullName>
        <label>AR Statement Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Statements Or Finance Charges</fullName>
                    <default>true</default>
                    <label>No Statements Or Finance Charges</label>
                </value>
                <value>
                    <fullName>Statements - But No Finance Charges Ever</fullName>
                </value>
                <value>
                    <fullName>Print Statements, No Finance Charges</fullName>
                </value>
                <value>
                    <fullName>Print Statements, Show Finance Charges, Do Not Book</fullName>
                </value>
                <value>
                    <fullName>Print Statements With Finance Charges And Book Them</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_writeoff_policy__c</fullName>
        <label>Z_OBSOLETE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Small Balances Only</fullName>
                </value>
                <value>
                    <fullName>Large Balances Only</fullName>
                </value>
                <value>
                    <fullName>Small and Large Balances</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_writeup_policy__c</fullName>
        <label>Z_OBSOLETE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Small Balances Only</fullName>
                </value>
                <value>
                    <fullName>Large Balances Only</fullName>
                </value>
                <value>
                    <fullName>Small and Large Balances</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__arcntl_zerobalmessage__c</fullName>
        <label>Zero-Balance Statement Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arcntl_glcmp__r.rstkf__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__arcntl_glcmp__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Accounts Receivable Control</label>
    <listViews>
        <fullName>AR_Control_ROD</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcntl_glcmp__c</columns>
        <columns>rstkf__arcntl_interestexpacct__c</columns>
        <columns>rstkf__arcntl_interestincomeacct__c</columns>
        <columns>rstkf__arcntl_arbatchopt__c</columns>
        <columns>rstkf__arcntl_cashtoglpolicy__c</columns>
        <columns>rstkf__arcntl_dfltaracct__c</columns>
        <columns>rstkf__arcntl_bankacctpolicy__c</columns>
        <columns>rstkf__arcntl_dfltbankacct__c</columns>
        <columns>rstkf__arcntl_statementpolicy__c</columns>
        <columns>rstkf__arcntl_createzerobalstmts__c</columns>
        <columns>rstkf__arcntl_finchargedays__c</columns>
        <columns>rstkf__arcntl_finchargepct__c</columns>
        <columns>rstkf__arcntl_finchgshowdetails__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Control ROD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_AR_Control</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcntl_glcmp__c</columns>
        <columns>rstkf__arcntl_arbatchopt__c</columns>
        <columns>rstkf__arcntl_cashtoglpolicy__c</columns>
        <columns>rstkf__arcntl_dfltaracct__c</columns>
        <columns>rstkf__arcntl_bankacctpolicy__c</columns>
        <columns>rstkf__arcntl_dfltbankacct__c</columns>
        <columns>rstkf__arcntl_statementpolicy__c</columns>
        <columns>rstkf__arcntl_createzerobalstmts__c</columns>
        <columns>rstkf__arcntl_finchargedays__c</columns>
        <columns>rstkf__arcntl_finchargepct__c</columns>
        <columns>rstkf__arcntl_finchgshowdetails__c</columns>
        <columns>rstkf__arcntl_writeup_policy__c</columns>
        <columns>rstkf__arcntl_writeoff_policy__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Control</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_AR_Control_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__arcntl_glcmp__c</columns>
        <columns>rstkf__arcntl_arbatchopt__c</columns>
        <columns>rstkf__arcntl_cashtoglpolicy__c</columns>
        <columns>rstkf__arcntl_dfltaracct__c</columns>
        <columns>rstkf__arcntl_bankacctpolicy__c</columns>
        <columns>rstkf__arcntl_dfltbankacct__c</columns>
        <columns>rstkf__arcntl_statementpolicy__c</columns>
        <columns>rstkf__arcntl_createzerobalstmts__c</columns>
        <columns>rstkf__arcntl_finchargedays__c</columns>
        <columns>rstkf__arcntl_finchargepct__c</columns>
        <columns>rstkf__arcntl_finchgshowdetails__c</columns>
        <columns>rstkf__arcntl_writeup_policy__c</columns>
        <columns>rstkf__arcntl_writeoff_policy__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Control - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>AR Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Receivable Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__Company_Req_NotModified</fullName>
        <active>true</active>
        <description>Company Name is required and cannot be modified</description>
        <errorConditionFormula>ISBLANK(rstkf__arcntl_glcmp__c)
||(!ISNEW() &amp;&amp; ISCHANGED(rstkf__arcntl_glcmp__c))</errorConditionFormula>
        <errorMessage>Company Name is required and cannot be modified</errorMessage>
    </validationRules>
</CustomObject>